--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -22,11 +22,11 @@
     <ion-list>
       
       <ion-item>
-        <ion-input type="text" label="Usuario" [(ngModel)]="username" labelPlacement="floating" placeholder="Usuario"></ion-input>
+        <ion-input type="text" label="Usuario" [(ngModel)]="username" labelPlacement="stacked" placeholder="Usuario"></ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-input type="password" label="Contraseña" [(ngModel)]="password" labelPlacement="floating" placeholder="Contraseña">
+        <ion-input type="password" label="Contraseña" [(ngModel)]="password" labelPlacement="stacked" placeholder="Contraseña">
           <ion-input-password-toggle slot="end"></ion-input-password-toggle>
         </ion-input>
       </ion-item>
