--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -32,10 +32,10 @@
       </ion-item>
 
       <ion-card-content class="ion-text-end">
-        <ion-button size="small" fill="clear">¿Olvidaste tu contraseña?</ion-button>
+        <ion-button class="reset-password-button" size="small" fill="clear">¿Olvidaste tu contraseña?</ion-button>
       </ion-card-content>
 
-      <ion-button class="ion-padding" expand="block" shape="round" (click)="validateLogin()">Iniciar sesión</ion-button>
+      <ion-button class="ion-padding login-button" expand="block" shape="round" (click)="validateLogin()">Iniciar sesión</ion-button>
     </ion-list>
 
   </ion-card>
