Formato con Prettier

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,31 +1,23 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      RegistrAPP
-    </ion-title>
+    <ion-title> RegistrAPP </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true" class="ion-text-center">
-  
-      <ion-card-header>
-        <ion-card-title >
-          Hola, {{ username }} 
-          <br>
-        </ion-card-title>
-        <!-- <ion-card-subtitle>Inicia sesión para continuar.</ion-card-subtitle> -->
-      </ion-card-header>
-      
+  <ion-card-header>
+    <ion-card-title>
+      Hola, {{ username }}
+      <br />
+    </ion-card-title>
+    <!-- <ion-card-subtitle>Inicia sesión para continuar.</ion-card-subtitle> -->
+  </ion-card-header>
 </ion-content>
 
 <ion-tabs>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="home">
-      Inicio
-    </ion-tab-button>
-    <ion-tab-button tab="library">
-      Escanear
-    </ion-tab-button>
+    <ion-tab-button tab="home"> Inicio </ion-tab-button>
+    <ion-tab-button tab="library"> Escanear </ion-tab-button>
     <ion-tab-button tab="search" (click)="navigateToLogin()">
       Cerrar sesión
     </ion-tab-button>
