--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,17 +1,23 @@
-
 <ion-content class="ion-padding">
   <ion-card class="ion-text-center">
-
     <ion-card-header>
-      <ion-card-title >
-        {{ welcomeMessage }} 
-        <br>
+      <ion-card-title>
+        {{ welcomeMessage }}
+        <br />
         {{ subMessage }}
       </ion-card-title>
       <!-- <ion-card-subtitle>Inicia sesión para continuar.</ion-card-subtitle> -->
     </ion-card-header>
-  
-    <div style="display: block;height: 1px;border: 0;border-top: 1px solid #535353;margin: 1em;"></div>
+
+    <div
+      style="
+        display: block;
+        height: 1px;
+        border: 0;
+        border-top: 1px solid #535353;
+        margin: 1em;
+      "
+    ></div>
 
     <!--
     <ion-card-content>
@@ -20,24 +26,42 @@
     -->
 
     <ion-list>
-      
       <ion-item>
-        <ion-input type="text" label="Usuario" [(ngModel)]="username" labelPlacement="stacked" placeholder="Usuario"></ion-input>
+        <ion-input
+          type="text"
+          label="Usuario"
+          [(ngModel)]="username"
+          labelPlacement="stacked"
+          placeholder="Usuario"
+        ></ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-input type="password" label="Contraseña" [(ngModel)]="password" labelPlacement="stacked" placeholder="Contraseña">
+        <ion-input
+          type="password"
+          label="Contraseña"
+          [(ngModel)]="password"
+          labelPlacement="stacked"
+          placeholder="Contraseña"
+        >
           <ion-input-password-toggle slot="end"></ion-input-password-toggle>
         </ion-input>
       </ion-item>
 
       <ion-card-content class="ion-text-end">
-        <ion-button class="reset-password-button" size="small" fill="clear">¿Olvidaste tu contraseña?</ion-button>
+        <ion-button class="reset-password-button" size="small" fill="clear"
+          >¿Olvidaste tu contraseña?</ion-button
+        >
       </ion-card-content>
 
-      <ion-button class="ion-padding login-button" expand="block" shape="round" (click)="validateLogin()">Iniciar sesión</ion-button>
+      <ion-button
+        class="ion-padding login-button"
+        expand="block"
+        shape="round"
+        (click)="validateLogin()"
+        >Iniciar sesión</ion-button
+      >
     </ion-list>
-
   </ion-card>
 </ion-content>
 <!--
