Añadido redirección a la página de reestablecimiento de contraseña

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -49,7 +49,11 @@
       </ion-item>
 
       <ion-card-content class="ion-text-end">
-        <ion-button class="reset-password-button" size="small" fill="clear"
+        <ion-button 
+          class="reset-password-button" 
+          size="small" 
+          fill="clear"
+          (click)="navigateToPasswordReset()"
           >¿Olvidaste tu contraseña?</ion-button
         >
       </ion-card-content>
