--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,8 +1,12 @@
+
 <ion-content class="ion-padding">
   <ion-card class="ion-text-center">
     <ion-card-header>
+      <div style="display: flex; justify-content: center; margin-bottom: 20px;">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/a/aa/Logo_DuocUC.svg" alt="DuocUC Logo" style="max-width: 240px;">
+      </div>
       <ion-card-title>
-        {{ welcomeMessage }}
+        {{ welcomeMessage }} <span class="gradient-app-name">RegistrAPP!</span>
         <br />
         {{ subMessage }}
       </ion-card-title>
@@ -44,7 +48,7 @@
           labelPlacement="stacked"
           placeholder="Contraseña"
         >
-          <ion-input-password-toggle slot="end"></ion-input-password-toggle>
+          <ion-input-password-toggle slot="end" color="secondary"></ion-input-password-toggle>
         </ion-input>
       </ion-item>
 
