Arreglado problema de compatibilidad con navegadores en texto con gradiente

--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -8,6 +8,7 @@
   background-color: #59dbde;
   background-image: linear-gradient(90deg, #59dbde 0%, #fc7fff 100%);
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
