Añadida: validación usuario en restablecer contraseña

--- a/src/app/password-reset/password-reset.page.html
+++ b/src/app/password-reset/password-reset.page.html
@@ -7,7 +7,7 @@
       <ion-item>
         <ion-input
           label="Usuario"
-          [(ngModel)]="usuario"
+          [(ngModel)]="user"
           labelPlacement="floating"
         ></ion-input>
       </ion-item>
@@ -16,7 +16,7 @@
       class="ion-padding"
       expand="block"
       shape="round"
-      [routerLink]="['/login']"
+      (click)="resetPassword()"
       >Recuperar</ion-button
     >
   </ion-card>
