--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,3 +1,64 @@
+<ion-content [fullscreen]="true" class="ion-padding">
+  <ion-card class="ion-text-center">
+    <ion-card-header>
+      <div style="display: flex; justify-content: center; margin-bottom: 20px">
+        <img
+          src="https://upload.wikimedia.org/wikipedia/commons/a/aa/Logo_DuocUC.svg"
+          alt="DuocUC Logo"
+          style="max-width: 200px"
+        />
+      </div>
+      <ion-card-title>
+        Bienvenid&#64;, {{ username }}
+      </ion-card-title>
+      <ion-card-subtitle>¿Qué deseas hacer hoy?</ion-card-subtitle>
+    </ion-card-header>
+
+    <div
+      style="
+        display: block;
+        height: 1px;
+        border: 0;
+        border-top: 1px solid #535353;
+        margin: 1em;
+      "
+    ></div>
+
+    <ion-card-content>
+      <ion-button expand="block" shape="round" class="ion-margin-bottom">
+        <ion-icon name="qr-code-outline" slot="start"></ion-icon>
+        Escanear QR
+      </ion-button>
+      <ion-button expand="block" shape="round" class="ion-margin-bottom" color="light">
+        <ion-icon name="book-outline" slot="start"></ion-icon>
+        Asistencias
+      </ion-button>
+      <ion-button expand="block" shape="round" class="ion-margin-bottom" color="secondary">
+        <ion-icon name="time-outline" slot="start"></ion-icon>
+        Mi horario
+      </ion-button>
+    </ion-card-content>
+  </ion-card>
+</ion-content>
+
+<ion-tabs>
+  <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="home">
+      <ion-icon name="home-outline"></ion-icon>
+      <ion-label>Inicio</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="scan">
+      <ion-icon name="qr-code-outline"></ion-icon>
+      <ion-label>Escanear</ion-label>
+    </ion-tab-button>
+    <ion-tab-button (click)="navigateToLogin()">
+      <ion-icon name="log-out-outline"></ion-icon>
+      <ion-label>Cerrar sesión</ion-label>
+    </ion-tab-button>
+  </ion-tab-bar>
+</ion-tabs>
+
+<!--
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title> RegistrAPP </ion-title>
@@ -10,7 +71,6 @@
       Hola, {{ username }}
       <br />
     </ion-card-title>
-    <!-- <ion-card-subtitle>Inicia sesión para continuar.</ion-card-subtitle> -->
   </ion-card-header>
 </ion-content>
 
@@ -23,3 +83,5 @@
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
+
+-->
