--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,9 +8,7 @@
           style="max-width: 200px"
         />
       </div>
-      <ion-card-title>
-        Bienvenid&#64;, {{ username }}
-      </ion-card-title>
+      <ion-card-title> Bienvenid&#64;, {{ username }} </ion-card-title>
       <ion-card-subtitle>¿Qué deseas hacer hoy?</ion-card-subtitle>
     </ion-card-header>
 
@@ -25,15 +23,32 @@
     ></div>
 
     <ion-card-content>
-      <ion-button expand="block" shape="round" class="ion-margin-bottom">
+      <ion-button
+        expand="block"
+        shape="round"
+        class="ion-margin-bottom"
+        (click)="unavailableFunctionToast()"
+      >
         <ion-icon name="qr-code-outline" slot="start"></ion-icon>
         Escanear QR
       </ion-button>
-      <ion-button expand="block" shape="round" class="ion-margin-bottom" color="light">
+      <ion-button
+        expand="block"
+        shape="round"
+        class="ion-margin-bottom"
+        color="light"
+        (click)="unavailableFunctionToast()"
+      >
         <ion-icon name="book-outline" slot="start"></ion-icon>
         Asistencias
       </ion-button>
-      <ion-button expand="block" shape="round" class="ion-margin-bottom" color="secondary">
+      <ion-button
+        expand="block"
+        shape="round"
+        class="ion-margin-bottom"
+        color="secondary"
+        (click)="unavailableFunctionToast()"
+      >
         <ion-icon name="time-outline" slot="start"></ion-icon>
         Mi horario
       </ion-button>
@@ -47,7 +62,7 @@
       <ion-icon name="home-outline"></ion-icon>
       <ion-label>Inicio</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="scan">
+    <ion-tab-button tab="scan" (click)="unavailableFunctionToast()">
       <ion-icon name="qr-code-outline"></ion-icon>
       <ion-label>Escanear</ion-label>
     </ion-tab-button>
