Añadido padding a contenido de password-reset.page y agregado redirección a login.page en caso de que el usuario no esté logueado

--- a/src/app/password-reset/password-reset.page.html
+++ b/src/app/password-reset/password-reset.page.html
@@ -1,4 +1,4 @@
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="ion-padding">
   <ion-card>
     <ion-card-header>
       <ion-card-title>Restablecer contraseña</ion-card-title>
