--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,4 @@
-<ion-content [fullscreen]="true" class="ion-padding">
+<ion-content class="ion-padding">
   <ion-card class="ion-text-center">
     <ion-card-header>
       <div style="display: flex; justify-content: center; margin-bottom: 20px">
