Modificado diseño de password-reset

--- a/src/app/password-reset/password-reset.page.html
+++ b/src/app/password-reset/password-reset.page.html
@@ -1,7 +1,15 @@
 <ion-content [fullscreen]="true" class="ion-padding">
   <ion-card>
-    <ion-card-header>
-      <ion-card-title>Restablecer contraseña</ion-card-title>
+    <ion-card-header style="text-align: center">
+      <div style="display: flex; justify-content: center; margin-bottom: 20px">
+        <img
+          src="https://upload.wikimedia.org/wikipedia/commons/a/aa/Logo_DuocUC.svg"
+          alt="DuocUC Logo"
+          style="max-width: 240px"
+        />
+      </div>
+      <ion-card-title>¿Olvidaste tu contraseña? 😟</ion-card-title>
+      <p>¡No te preocupes! Ingresa tu nombre de usuario para reestablecerla.</p>
     </ion-card-header>
     <ion-list>
       <ion-item>
