Añadida clase Usuario

--- a/src/app/password-reset/password-reset.page.html
+++ b/src/app/password-reset/password-reset.page.html
@@ -11,6 +11,15 @@
       <ion-card-title>¿Olvidaste tu contraseña? 😟</ion-card-title>
       <p>¡No te preocupes! Ingresa tu nombre de usuario para reestablecerla.</p>
     </ion-card-header>
+    <div
+      style="
+        display: block;
+        height: 1px;
+        border: 0;
+        border-top: 1px solid #535353;
+        margin: 1em;
+      "
+    ></div>
     <ion-list>
       <ion-item>
         <ion-input
