--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -75,6 +75,13 @@
         (click)="validateLogin()"
         >Iniciar sesión</ion-button
       >
+      <ion-button
+        class="ion-padding login-button"
+        expand="block"
+        shape="round"
+        (click)="testing()"
+        >testing</ion-button
+      >
     </ion-list>
   </ion-card>
 </ion-content>
