auth y storage services funcionando correctamente

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -72,7 +72,7 @@
         class="ion-padding login-button"
         expand="block"
         shape="round"
-        (click)="validateLogin()"
+        (click)="login(username, password)"
         >Iniciar sesión</ion-button
       >
     </ion-list>
