--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -58,6 +58,10 @@
 
 <ion-tabs>
   <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="profile">
+      <ion-icon name="person-circle-outline"></ion-icon>
+      <ion-label>Mi perfil</ion-label>
+    </ion-tab-button>
     <ion-tab-button tab="home">
       <ion-icon name="home-outline"></ion-icon>
       <ion-label>Inicio</ion-label>
