añadidas página de perfil y página de error 404

--- a/src/app/password-reset/password-reset.page.html
+++ b/src/app/password-reset/password-reset.page.html
@@ -36,5 +36,14 @@
       (click)="resetPassword()"
       >Recuperar</ion-button
     >
+    <ion-button
+      class="ion-padding"
+      expand="block"
+      shape="round"
+      color="medium"
+      fill="clear"
+      (click)="goToLogin()"
+      >Volver</ion-button
+    >
   </ion-card>
 </ion-content>
