--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -58,7 +58,7 @@
 
 <ion-tabs>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="profile">
+    <ion-tab-button (click)="goToProfile()">
       <ion-icon name="person-circle-outline"></ion-icon>
       <ion-label>Mi perfil</ion-label>
     </ion-tab-button>
