Agregar funcionalidad de escaner QR

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -75,6 +75,14 @@
         (click)="login(username, password)"
         >Iniciar sesión</ion-button
       >
+
+      <ion-button
+        class="reset-password-button"
+        size="small"
+        fill="clear"
+        (click)="scan()"
+        >testing-scanner</ion-button
+      >
     </ion-list>
   </ion-card>
 </ion-content>
