--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -1,8 +1,10 @@
-<ion-content class="ion-padding">
+<ion-content class="ion-padding" [fullscreen]="true">
   <ion-card class="ion-text-center">
     <ion-card-header>
       <ion-card-title class="ion-margin-top">{{ userFullName }}</ion-card-title>
-      <ion-card-subtitle *ngIf="currentUser">{{ currentUser.role | titlecase }}</ion-card-subtitle>
+      <ion-card-subtitle *ngIf="currentUser"
+        >{{ currentUser.role | titlecase }}</ion-card-subtitle
+      >
     </ion-card-header>
 
     <div class="divider"></div>
@@ -10,7 +12,11 @@
     <ion-card-content>
       <ion-list lines="none" *ngIf="currentUser">
         <ion-item>
-          <ion-icon name="school-outline" slot="start" color="primary"></ion-icon>
+          <ion-icon
+            name="school-outline"
+            slot="start"
+            color="primary"
+          ></ion-icon>
           <ion-label>
             <h2>Carrera</h2>
             <p>{{ currentUser.carrera | titlecase }}</p>
@@ -18,7 +24,11 @@
         </ion-item>
 
         <ion-item>
-          <ion-icon name="person-outline" slot="start" color="primary"></ion-icon>
+          <ion-icon
+            name="person-outline"
+            slot="start"
+            color="primary"
+          ></ion-icon>
           <ion-label>
             <h2>Nombre de usuario</h2>
             <p>{{ currentUser.username }}</p>
@@ -34,7 +44,11 @@
         </ion-item>
 
         <ion-item>
-          <ion-icon name="calendar-outline" slot="start" color="primary"></ion-icon>
+          <ion-icon
+            name="calendar-outline"
+            slot="start"
+            color="primary"
+          ></ion-icon>
           <ion-label>
             <h2>Fecha de registro</h2>
             <p>{{ getFormattedDate(currentUser.createdAt) }}</p>
@@ -53,7 +67,7 @@
           <ion-icon name="create-outline" slot="start"></ion-icon>
           Editar perfil
         </ion-button>
-        
+
         <ion-button
           expand="block"
           shape="round"
