--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -38,7 +38,6 @@
         shape="round"
         class="ion-margin-bottom"
         color="light"
-        (click)="navigateToAttendance()"
       >
         <ion-icon name="book-outline" slot="start"></ion-icon>
         Asistencias
@@ -61,24 +60,5 @@
   </ion-card>
 
   <!-- TABS -->
-  <ion-tabs>
-    <ion-tab-bar slot="bottom">
-      <ion-tab-button (click)="goToProfile()">
-        <ion-icon name="person-circle-outline"></ion-icon>
-        <ion-label>Mi perfil</ion-label>
-      </ion-tab-button>
-      <ion-tab-button>
-        <ion-icon name="home-outline"></ion-icon>
-        <ion-label>Inicio</ion-label>
-      </ion-tab-button>
-      <ion-tab-button tab="scan" (click)="scan()">
-        <ion-icon name="qr-code-outline"></ion-icon>
-        <ion-label>Escanear</ion-label>
-      </ion-tab-button>
-      <ion-tab-button (click)="logout()">
-        <ion-icon name="log-out-outline"></ion-icon>
-        <ion-label>Cerrar sesión</ion-label>
-      </ion-tab-button>
-    </ion-tab-bar>
-  </ion-tabs>
+  <app-tab-menu></app-tab-menu>
 </ion-content>
