compatibilizando nuevos modelos con estado de la app

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -27,7 +27,7 @@
         class="ion-margin-bottom"
         expand="block"
         shape="round"
-        (click)="scan()"
+        (click)="true"
       >
         <ion-icon name="qr-code-outline" slot="start"></ion-icon>
         Escanear QR
