--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -31,7 +31,7 @@
           ></ion-icon>
           <ion-label>
             <h2>Nombre de usuario</h2>
-            <p>{{ currentUser.username }}</p>
+            <p>{{ currentUser.nombre }}</p>
           </ion-label>
         </ion-item>
 
@@ -51,7 +51,7 @@
           ></ion-icon>
           <ion-label>
             <h2>Fecha de registro</h2>
-            <p>{{ getFormattedDate(currentUser.createdAt) }}</p>
+            <p></p>
           </ion-label>
         </ion-item>
       </ion-list>
