--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -3,7 +3,7 @@
     <ion-card-header>
       <ion-card-title class="ion-margin-top">{{ userFullName }}</ion-card-title>
       <ion-card-subtitle *ngIf="currentUser"
-        >{{ currentUser.role | titlecase }}</ion-card-subtitle
+        >{{ currentUser.rol | titlecase }}</ion-card-subtitle
       >
     </ion-card-header>
 
@@ -82,24 +82,6 @@
     </ion-card-content>
   </ion-card>
 
-  <ion-tabs>
-    <ion-tab-bar slot="bottom">
-      <ion-tab-button>
-        <ion-icon name="person-circle-outline"></ion-icon>
-        <ion-label>Mi perfil</ion-label>
-      </ion-tab-button>
-      <ion-tab-button (click)="goToHome()">
-        <ion-icon name="home-outline"></ion-icon>
-        <ion-label>Inicio</ion-label>
-      </ion-tab-button>
-      <ion-tab-button (click)="unavailableFunctionToast()">
-        <ion-icon name="qr-code-outline"></ion-icon>
-        <ion-label>Escanear</ion-label>
-      </ion-tab-button>
-      <ion-tab-button (click)="logout()">
-        <ion-icon name="log-out-outline"></ion-icon>
-        <ion-label>Cerrar sesión</ion-label>
-      </ion-tab-button>
-    </ion-tab-bar>
-  </ion-tabs>
+  <app-tab-menu></app-tab-menu>
+
 </ion-content>
