--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -23,11 +23,12 @@
     ></div>
 
     <ion-card-content>
+      <!-- BUTTON | ESCANER -->
       <ion-button
         class="ion-margin-bottom"
         expand="block"
         shape="round"
-        (click)="true"
+        (click)="this.navigationService.openScanner()"
       >
         <ion-icon name="qr-code-outline" slot="start"></ion-icon>
         Escanear QR
@@ -42,6 +43,7 @@
         <ion-icon name="book-outline" slot="start"></ion-icon>
         Asistencias
       </ion-button>
+
       <ion-button
         expand="block"
         shape="round"
@@ -53,10 +55,6 @@
         Mi horario
       </ion-button>
     </ion-card-content>
-
-    <div>
-      <p>{{scanResult}}</p>
-    </div>
   </ion-card>
 
   <!-- TABS -->
