--- a/src/app/tab-menu/tab-menu.component.html
+++ b/src/app/tab-menu/tab-menu.component.html
@@ -1,7 +1,10 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <!-- ADMIN -->
-    <ion-tab-button *ngIf = "currentUser.rol === 'admin'" (click)="this.navigationService.navigateToAdmin()">
+    <ion-tab-button
+      *ngIf="currentUser.rol === 'admin'"
+      (click)="this.navigationService.navigateToAdmin()"
+    >
       <ion-icon name="shield-checkmark-outline"></ion-icon>
       <ion-label>Admin</ion-label>
     </ion-tab-button>
@@ -11,11 +14,17 @@
       <ion-label>Inicio</ion-label>
     </ion-tab-button>
     <!-- ESCANER -->
-    <ion-tab-button *ngIf="currentUser.rol === 'docente'" (click)="this.navigationService.navigateToGenerateQR()">
+    <ion-tab-button
+      *ngIf="currentUser.rol === 'docente'"
+      (click)="this.navigationService.navigateToGenerateQR()"
+    >
       <ion-icon name="qr-code-outline"></ion-icon>
       <ion-label>Generar</ion-label>
     </ion-tab-button>
-    <ion-tab-button *ngIf="!(currentUser.rol === 'docente')">
+    <ion-tab-button
+      *ngIf="!(currentUser.rol === 'docente')"
+      (click)="this.navigationService.openScanner()"
+    >
       <ion-icon name="qr-code-outline"></ion-icon>
       <ion-label>Escanear</ion-label>
     </ion-tab-button>
