--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -33,12 +33,13 @@
         <ion-icon name="qr-code-outline" slot="start"></ion-icon>
         Escanear QR
       </ion-button>
-
+      <!-- BUTTON | ASISTENCIA -->
       <ion-button
         expand="block"
         shape="round"
         class="ion-margin-bottom"
         color="light"
+        (click)="this.navigationService.navigateToAttendance()"
       >
         <ion-icon name="book-outline" slot="start"></ion-icon>
         Asistencias
