--- a/src/app/attendance/attendance.page.html
+++ b/src/app/attendance/attendance.page.html
@@ -8,7 +8,23 @@
     <div class="divider"></div>
 
     <ion-card-content>
-      <ion-accordion-group>
+      <ion-list *ngFor="let asistencia of asistencias">
+        <ion-item>
+          <ion-label>
+            <h2>Asignatura</h2>
+            <p>{{ asistencia.claseId }}</p>
+          </ion-label>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>
+            <h2>Fecha</h2>
+            <p>{{ asistencia.timestamp }}</p>
+          </ion-label></ion-item
+        >
+      </ion-list>
+
+      <!-- <ion-accordion-group>
         <ion-accordion
           *ngFor="let asignatura of asignaturas"
           [value]="asignatura.id"
@@ -22,7 +38,7 @@
             </ul>
           </div>
         </ion-accordion>
-      </ion-accordion-group>
+      </ion-accordion-group> -->
     </ion-card-content>
   </ion-card>
 
