cambios menores en elementos en profile y login

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -36,10 +36,10 @@
       <ion-item>
         <ion-input
           type="text"
-          label="Usuario"
+          label="Correo electrónico"
           [(ngModel)]="username"
           labelPlacement="stacked"
-          placeholder="Usuario"
+          placeholder="Correo electrónico"
         ></ion-input>
       </ion-item>
 
