--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -43,7 +43,7 @@
           </ion-label>
         </ion-item>
 
-        <ion-item>
+        <!-- <ion-item> BORRAR ESTA??
           <ion-icon
             name="calendar-outline"
             slot="start"
@@ -52,11 +52,11 @@
           <ion-label>
             <h2>Fecha de registro</h2>
             <p></p>
-          </ion-label>
-        </ion-item>
+          </ion-label>A
+        </ion-item> -->
       </ion-list>
 
-      <div class="ion-margin-top">
+      <!-- <div class="ion-margin-top">
         <ion-button
           expand="block"
           shape="round"
@@ -78,10 +78,9 @@
           <ion-icon name="key-outline" slot="start"></ion-icon>
           Cambiar contraseña
         </ion-button>
-      </div>
+      </div> -->
     </ion-card-content>
   </ion-card>
 
   <app-tab-menu></app-tab-menu>
-
 </ion-content>
