Agregar alert de confirmacion para acciones criticas

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -23,6 +23,16 @@
     ></div>
 
     <ion-card-content>
+      <ion-button
+        class="ion-margin-bottom"
+        expand="block"
+        shape="round"
+        color="light"
+        (click)="this.navigationService.openConfirmDialog()"
+      >
+        TESTING CONFIRM DIALOG
+      </ion-button>
+
       <!-- BUTTON | ESCANER -->
       <ion-button
         class="ion-margin-bottom"
