--- a/src/app/attendance/attendance.page.html
+++ b/src/app/attendance/attendance.page.html
@@ -12,14 +12,14 @@
         <ion-item>
           <ion-label>
             <h2>Asignatura</h2>
-            <p>{{ asistencia.claseId }}</p>
+            <p>{{ asistencia.asignatura }}</p>
           </ion-label>
         </ion-item>
 
         <ion-item>
           <ion-label>
             <h2>Fecha</h2>
-            <p>{{ asistencia.timestamp }}</p>
+            <p>{{ asistencia.fecha}}</p>
           </ion-label></ion-item
         >
       </ion-list>
