Agregar alertas al escanear qr

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -28,7 +28,7 @@
         expand="block"
         shape="round"
         color="light"
-        (click)="this.navigationService.openConfirmDialog()"
+        (click)="this.navigationService.openScanner()"
       >
         TESTING CONFIRM DIALOG
       </ion-button>
