Agregar validacion de asistencias duplicadas

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -28,9 +28,9 @@
         expand="block"
         shape="round"
         color="light"
-        (click)="this.navigationService.openScanner()"
+        (click)="testing()"
       >
-        TESTING CONFIRM DIALOG
+        TESTING
       </ion-button>
 
       <!-- BUTTON | ESCANER -->
